--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,14 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
 
-#  postgres:
-#    image: postgres:alpine
-#    hostname: postgres
-#    container_name: postgres
-#    ports:
-#      - "5432:5432"
-#    restart: unless-stopped
-#    networks:
-#      - testing_env
-#    environment:
-#      - POSTGRES_PASSWORD=password
+  postgres:
+    image: postgres:alpine
+    hostname: postgres
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    networks:
+      - testing_env
+    environment:
+      - POSTGRES_PASSWORD=password
